# pim

./: .gitignore  README.md  hello_world.py  main.cpp  pim.py  pyproject.toml  pyvenv.cfg
Scripts/: activate  activate.bat
env310/Scripts/: activate  activate.bat
env312/: pyvenv.cfg
env312/Scripts/: activate  activate.bat
src/: main.py  pim.py
src/utils/: editor_state.py  file_handler.py  key_handler.py  pim_editor.py
test_files/: main.cpp
