[tool.poetry]
authors = ["sandy-5000"]
description = "Trying to Mimic Vim"
name = "pim-editor"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
pyperclip = "^1.9.0"
python = ">=3.10"
windows-curses = "^2.4.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
